--- a/Style.css
+++ b/Style.css
@@ -1,92 +1,106 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
 }
 
-body{
-    display: flex;
-    background-color: #222;
-    justify-content: center;
-    align-items: center;
-    color: white;
+body {
+  display: flex;
+  background-color: #222;
+  justify-content: center;
+  align-items: center;
+  color: white;
 }
 
-.card{
-    width: 300px;
-    height: 400px;
-    background-color: rgb(9, 149, 146);
-    display: flex;
+.card {
+  width: 300px;
+  height: 400px;
+  background: rgb(4, 150, 255);
+  background: linear-gradient(
+    157deg,
+    rgba(4, 150, 255, 1) 0%,
+    rgba(94, 0, 150, 1) 100%
+  );
+  /* display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    border-radius: 20px;
-    border: none;
-    padding: 0px;
-
+    align-items: center; */
+  border-radius: 20px;
+  border: none;
+  padding: 0px;
 }
 
-.search{
-    padding: 20px;
-    display: flex;
-    justify-content: center;
-    gap: 5px;
+.search {
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
 }
 
-.search input{
-    width: 75%;
-    height: 5vh;
-    border-radius: 25px;
-    border: none;
-    padding: 20px;
+.search input {
+  width: 75%;
+  height: 5vh;
+  border-radius: 25px;
+  border: none;
+  padding: 20px;
 }
 
-.search button{
-    width: 40px;
-    height: 40px;
-    border-radius: 100px;
-    border: none;
-    background-color: white;
-    cursor: pointer;
+.search button {
+  width: 40px;
+  height: 40px;
+  border-radius: 100px;
+  border: none;
+  background-color: white;
+  cursor: pointer;
 }
 
-.search button img{
-    width: 95%;
-    height: 100%;
-    padding: 10px;
+.search button img {
+  width: 95%;
+  height: 100%;
+  padding: 10px;
 }
 
-.weather{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.weather {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.weather img{
-    width: 155px;
+.weather img {
+  width: 155px;
 }
 
-.details{
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: row;
-
+.details {
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: row;
+  margin-top: 25px;
 }
 
-.humidity{
-    font-size: small;
-
+.humidity {
+  display: flex;
+  justify-content: center;
+  gap: 7px;
 }
-.humidity img{
-    width: 35px;
+.humidity img {
+  width: 35px;
+  height: 35px;
 }
 
-.wind{
-    font-size: small;
-
+.wind {
+  display: flex;
+  justify-content: center;
+  gap: 7px;
 }
-.wind img{
-    width: 35px;
+.wind img {
+  width: 35px;
+  height: 35px;
+}
+
+.text h4 {
+  font-size: small;
+  font-weight: 100;
 }
